# HaskellKnit

./: .gitignore  Api-Knitting.cabal  CHANGELOG.md  ExplainOld.hs  README.md  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/5d817249/: cabal_macros.h
.stack-work/ghci/fd99d2de/: cabal_macros.h
app/: Evaluate.hs  Explain.hs  Graph.hs  Main.hs  Parser.hs  Print.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
knit-app/: app.js  fonts.css  graphics.mjs  index.html  pattern.html  pattern.js  style.css  styleold.css
patterns/: 3colors  cat.knit  catlovers.knit  test.knit  topsol.knit
